// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration with apollo-server correct span nesting 1`] = `
request:1
   finished: true
   logs:
   1. {"queryString":"query {\\n        a {\\n          one\\n          two\\n        }\\n      }"}
+-- a:2
      finished: true
      logs:
      1. {"result":"{one:1,two:2,three:[{four:4},{four:IV}]}"}
   +-- one:3
         finished: true
         logs:
         1. {"result":"1"}
   +-- two:4
         finished: true
         logs:
         1. {"result":"2"}

`;

exports[`integration with apollo-server does not start a field resolver span if the parent field resolver was not traced 1`] = `
request:1
   finished: true
   logs:
   1. {"queryString":"query {\\n        a {\\n          one\\n          two\\n        }\\n        b {\\n          four\\n        }\\n      }"}
+-- b:2
      finished: true
      logs:
      1. {"result":"{four:4}"}
   +-- four:3
         finished: true
         logs:
         1. {"result":"4"}

`;

exports[`integration with apollo-server implements traces for arrays 1`] = `
request:1
   finished: true
   logs:
   1. {"queryString":"query {\\n        as {\\n          one\\n          two\\n        }\\n      }"}
+-- as:2
      finished: true
      logs:
      1. {"result":"[{one:1,two:2},{one:I,two:II},{one:eins,two:zwei}]"}
   +-- one:3
         finished: true
         logs:
         1. {"result":"1"}
   +-- two:4
         finished: true
         logs:
         1. {"result":"2"}
   +-- one:5
         finished: true
         logs:
         1. {"result":"I"}
   +-- two:6
         finished: true
         logs:
         1. {"result":"II"}
   +-- one:7
         finished: true
         logs:
         1. {"result":"eins"}
   +-- two:8
         finished: true
         logs:
         1. {"result":"zwei"}

`;
